--- a/app/src/main/res/layout/chi_tiet_don_hang.xml
+++ b/app/src/main/res/layout/chi_tiet_don_hang.xml
@@ -5,32 +5,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:weightSum="9">-->
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        android:weightSum="9">-->
 
-<!--        <EditText-->
-<!--            android:id="@+id/edt_search"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_weight="8"-->
-<!--            android:hint="Tim kiếm " />-->
+    <!--        <EditText-->
+    <!--            android:id="@+id/edt_search"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="50dp"-->
+    <!--            android:layout_weight="8"-->
+    <!--            android:hint="Tim kiếm " />-->
 
-<!--        <ImageButton-->
-<!--            android:id="@+id/imgBtn_search"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_weight="1"-->
-<!--            android:background="@null"-->
-<!--            android:contentDescription="@string/ic_search"-->
-<!--            android:minWidth="32dp"-->
-<!--            android:minHeight="48dp"-->
-<!--            android:src="@drawable/ic_search" />-->
+    <!--        <ImageButton-->
+    <!--            android:id="@+id/imgBtn_search"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_gravity="center"-->
+    <!--            android:layout_weight="1"-->
+    <!--            android:background="@null"-->
+    <!--            android:contentDescription="@string/ic_search"-->
+    <!--            android:minWidth="32dp"-->
+    <!--            android:minHeight="48dp"-->
+    <!--            android:src="@drawable/ic_search" />-->
 
-<!--    </LinearLayout>-->
+    <!--    </LinearLayout>-->
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,8 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/purple_500"
-            app:menu="@menu/menu_search"
-            />
+            app:menu="@menu/menu_search" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -50,8 +49,8 @@
         android:id="@+id/rcv_oder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
+        android:layout_weight="1" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,7 +60,7 @@
 
         <Button
             android:id="@+id/them_don_hang"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="#673AB7"
@@ -69,15 +68,6 @@
             android:text="thêm  "
             android:textColor="#fff" />
 
-        <Button
-            android:id="@+id/xoa_don_hang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:background="#673AB7"
-            android:padding="2dp"
-            android:text="Xóa  "
-            android:textColor="#fff" />
+
     </LinearLayout>
 </LinearLayout>
