update linh tinh

--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -28,6 +28,12 @@
         <menu>
             <item
 
+                android:id="@+id/nav_log_out"
+                android:icon="@drawable/ic_account"
+                android:title="@string/nav_log_out" />
+
+            <item
+
                 android:id="@+id/nav_account"
                 android:icon="@drawable/ic_account"
                 android:title="@string/nav_account" />
