--- a/app/src/main/res/layout/quan_ly_san_pham.xml
+++ b/app/src/main/res/layout/quan_ly_san_pham.xml
@@ -1,56 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/quan_ly_san_pham"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="5dp">
-
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:weightSum="9">
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
 
-        <EditText
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_search"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/purple_500"
+            app:menu="@menu/menu_search" />
 
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="8"
-            android:hint="Tim kiếm " />
+    </com.google.android.material.appbar.AppBarLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:weightSum="9">-->
 
-        <ImageButton
+<!--        <EditText-->
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@null"
-            android:contentDescription="@string/ic_search"
-            android:minWidth="32dp"
-            android:minHeight="48dp"
-            android:src="@drawable/ic_search" />
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_weight="8"-->
+<!--            android:hint="Tim kiếm " />-->
 
-    </LinearLayout>
+<!--        <ImageButton-->
+
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_weight="1"-->
+<!--            android:background="@null"-->
+<!--            android:contentDescription="@string/ic_search"-->
+<!--            android:minWidth="32dp"-->
+<!--            android:minHeight="48dp"-->
+<!--            android:src="@drawable/ic_search" />-->
+
+<!--    </LinearLayout>-->
 
    <androidx.recyclerview.widget.RecyclerView
-       android:layout_marginTop="5dp"
+       android:layout_marginTop="10dp"
        android:id="@+id/rcv_productt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
 
    </androidx.recyclerview.widget.RecyclerView>
-    <LinearLayout
-        android:layout_marginBottom="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+<!--    <LinearLayout-->
+<!--        android:layout_marginBottom="5dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center"-->
+<!--        android:orientation="horizontal">-->
 
 
 
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 </LinearLayout>
 
