--- a/app/src/main/res/layout/quan_ly_san_pham_custom.xml
+++ b/app/src/main/res/layout/quan_ly_san_pham_custom.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/quan_ly_san_pham_custom"
     android:layout_width="match_parent"
-    android:layout_height="260dp"
+    android:layout_height="270dp"
     android:layout_margin="5dp"
     android:background="#fff"
     android:orientation="vertical">
@@ -169,8 +169,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTxt_address"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginLeft="39dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@id/tv_state"
         android:text="đang vận chuyển"
 
@@ -184,6 +184,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
+        android:minHeight="48dp"
         android:text="Xác nhận " />
 
     <Button
@@ -196,6 +197,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_toRightOf="@id/btn_confirm"
+        android:minHeight="48dp"
         android:text="Hủy " />
     <!--        android:layout_below="@+id/tv_price"-->
 
