--- a/app/src/main/res/layout/chi_tiet_don_hang_custom.xml
+++ b/app/src/main/res/layout/chi_tiet_don_hang_custom.xml
@@ -105,7 +105,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
-                    android:text="VND"
+                    android:text="đ"
                     android:textColor="@color/black"
                     android:textStyle="bold" />
 
