--- a/app/src/main/res/layout/quan_li_san_pham.xml
+++ b/app/src/main/res/layout/quan_li_san_pham.xml
@@ -20,7 +20,8 @@
                     android:id="@+id/toolbar_search"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:background="@color/purple_500" />
+                    android:background="@color/purple_500"
+                   />
 
             </com.google.android.material.appbar.AppBarLayout>
 <!--            <EditText-->
